--- a/grid/src/Styles/loader.scss
+++ b/grid/src/Styles/loader.scss
@@ -22,7 +22,7 @@
     &--overlay {
         height: 100%;
         position: absolute;
-        z-index: 9;
+        z-index: 50;
         align-items: center;
     }
     &__block {
