--- a/grid/src/Styles/popover.scss
+++ b/grid/src/Styles/popover.scss
@@ -4,7 +4,7 @@
 }
 .neo-grid {
     .ng-popover {
-        z-index: 16;
+        z-index: 10;
         box-shadow: 0 rem(15) rem(30) var(--box-shadow);
         position: absolute;
         font-size: rem(13);
